--- a/css/main.css
+++ b/css/main.css
@@ -7,15 +7,18 @@ body {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	flex-flow: row wrap;
 	font-size: 1em;
+
 }
 
-.container{
-	max-width: 1200px;
-	margin: 0 auto;
+.container {
+	max-width: 360px;
+	width: 90%;
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	flex-flow: row wrap;
 }
 
 h1,
@@ -47,16 +50,16 @@ p {
 
 /*The widths are in a percentage!*/
 header {
-	height: 110px;
+
 	border-bottom: 3px solid #77a466;
 	margin: 0 auto;
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	flex-flow: row wrap;
 }
 
 header h1 {
-	float: left;
 	margin: 0;
 	padding: 38px 0;
 }
@@ -65,7 +68,6 @@ header h1 span {
 }
 
 header nav {
-	float: right;
 	padding: 46px 0;
 }
 header nav ul {
@@ -88,14 +90,13 @@ header nav ul li a{
 .top-section,
 .bottom-section {
 	margin: 0 auto;
-	clear: both;
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	flex-flow: row wrap;
 }
 
 .main-image {
-	height: auto;
 	float: left;
 }
 .main-image img {
@@ -104,8 +105,6 @@ header nav ul li a{
 }
 
 .main-title {
-	height: auto;
-	float: left;
 }
 .main-title h3 {
 	text-align: left;
@@ -122,8 +121,6 @@ header nav ul li a{
 .section-two,
 .section-three {
 	width: 33%;
-	height: auto;
-	float: left;
 	border-top: 1px solid #eee;
 }
 
@@ -166,15 +163,29 @@ footer {
 	height: 50px;
 	border-top: 3px solid #eee;
 	margin: 0 auto;
-	clear: both;
 	text-align: center;
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	flex-flow: row wrap;
 }
 footer span {
 	font-family: 'Galada', cursive;
 	text-transform: lowercase;
 	color: #77a466;
 	font-size: 0.8em;
+}
+
+/*****Tablet*****/
+@media (min-width: 768px) {
+	body, .container, header, .top-section, .bottom-section, footer {
+
+	}
+}
+
+/*******Desktop******/
+@media (min-width: 1200px) {
+	body, .container, header, .top-section, .bottom-section, footer {
+
+	}
 }
