--- a/css/main.css
+++ b/css/main.css
@@ -61,14 +61,17 @@ header {
 
 header h1 {
 	margin: 0;
-	padding: 38px 0;
+	padding: 15px 0;
+	border-bottom: 3px solid #77a466;
+	width: 100%;
+  text-align: center;
 }
 header h1 span {
 	color: #77a466;
 }
 
 header nav {
-	padding: 46px 0;
+	padding: 30px 0px;
 }
 header nav ul {
 	margin: 0;
@@ -77,9 +80,10 @@ header nav ul {
 header nav ul li {
 	text-transform: uppercase;
 	font-weight: 700;
-	font-size: 0.8em;
+	font-size: 1em;
+	line-height: 50px;
 	padding: 0 10px;
-	display: inline;
+	display: flex;
 }
 header nav ul li a{
 	text-decoration: none;
@@ -120,7 +124,7 @@ header nav ul li a{
 .section-one,
 .section-two,
 .section-three {
-	width: 33%;
+	width: 100%;
 	border-top: 1px solid #eee;
 }
 
@@ -166,7 +170,7 @@ footer {
 	text-align: center;
 	display: flex;
 	justify-content: center;
-	align-items: center;
+	align-items:cener;
 	flex-flow: row wrap;
 }
 footer span {
