--- a/css/main.css
+++ b/css/main.css
@@ -7,13 +7,12 @@ body {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	flex-flow: row wrap;
 	font-size: 1em;
 
 }
 
 .container {
-	max-width: 360px;
+	max-width: 1200px;
 	width: 90%;
 	display: flex;
 	justify-content: center;
@@ -45,14 +44,18 @@ h4 {
 p {
 	font-size: 0.8em;
 	line-height: 21px;
-  padding: 0 30px;
+}
+
+ul {
+    margin: 0;
 }
 
 /*The widths are in a percentage!*/
 header {
 
 	border-bottom: 3px solid #77a466;
-	margin: 0 auto;
+	text-align: center;
+	width: 100%;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -61,30 +64,33 @@ header {
 
 header h1 {
 	margin: 0;
-	padding: 15px 0;
+	padding: 38px 20px 20px 20px;
 	border-bottom: 3px solid #77a466;
 	width: 100%;
-  text-align: center;
 }
+
 header h1 span {
 	color: #77a466;
 }
 
 header nav {
-	padding: 30px 0px;
+	padding: 20px 0;
+	width: 100%;
 }
+
 header nav ul {
 	margin: 0;
 	padding: 0;
 }
+
 header nav ul li {
 	text-transform: uppercase;
 	font-weight: 700;
 	font-size: 1em;
-	line-height: 50px;
-	padding: 0 10px;
-	display: flex;
+	padding: 10px 0;
+	list-style: none;
 }
+
 header nav ul li a{
 	text-decoration: none;
 	color:#77a466;
@@ -93,23 +99,17 @@ header nav ul li a{
 /*The widths are in a percentage!*/
 .top-section,
 .bottom-section {
-	margin: 0 auto;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	flex-flow: row wrap;
 }
 
-.main-image {
-	float: left;
-}
 .main-image img {
 	width: 100%;
 	border-bottom: 3px solid #77a466;
 }
 
-.main-title {
-}
 .main-title h3 {
 	text-align: left;
 	padding: 5px 0;
@@ -118,7 +118,7 @@ header nav ul li a{
 .main-title p {
 	padding: 0;
 	font-size: 1em;
-	line-height: 25px;
+	font-size: 1.125em
 }
 
 .section-one,
@@ -128,24 +128,12 @@ header nav ul li a{
 	border-top: 1px solid #eee;
 }
 
-.section-one h4 {
-	padding: 10px 0;
-}
-
-.section-two {
-	border-left: 1px solid #eee;
-	border-right: 1px solid #eee;
-}
-
-.section-two h4,
-.section-three h4 {
-	padding: 10px 30px;
-}
 
 .menu {
 	list-style: none;
 	padding: 0;
 }
+
 .menu li {
 	padding: 10px 0;
 	color:#77a466;
@@ -154,23 +142,21 @@ header nav ul li a{
 .reviews {
 	color: #333;
 	font-size: 1em;
-	line-height: 21px;
+	line-height: 1.3125;
 }
 
 .address {
 	font-size: 1em;
-	line-height: 24px;
+	line-height: 1.5;
 }
 
 /*The widths are in a percentage!*/
 footer {
-	height: 50px;
 	border-top: 3px solid #eee;
-	margin: 0 auto;
-	text-align: center;
+	width: 100%;
 	display: flex;
 	justify-content: center;
-	align-items:cener;
+	align-items: center;
 	flex-flow: row wrap;
 }
 footer span {
@@ -181,15 +167,48 @@ footer span {
 }
 
 /*****Tablet*****/
-@media (min-width: 768px) {
-	body, .container, header, .top-section, .bottom-section, footer {
-
+@media only screen and (min-width: 768px) {
+	.bottom-section {
+	justify-content: space-between;
+	align-items: flex-start;
+	border-top: 1px solid #eee;
 	}
+
+.section-one,
+.section-two,
+.section-three {
+	border-top: none;
+	flex-basis: 30%;
+}
+
+.section-two {
+	border-left: 1px solid #eee;
+	border-right: 1px solid #eee;
+	padding: 0 20px;
+}
+
 }
 
 /*******Desktop******/
-@media (min-width: 1200px) {
-	body, .container, header, .top-section, .bottom-section, footer {
+@media only screen and (min-width: 1200px) {
+	header {
+		justify-content: space-between;
 
 	}
-}
+
+	header h1 {
+		width: 30%;
+		padding: 0;
+		border-bottom: none;
+		text-align: left;
+	}
+
+	header nav {
+		width: 40%;
+	}
+
+		header nav ul {
+	    display: flex;
+	    justify-content: space-between;
+	  }
+	}
